<resources>
    <string name="app_name">Arbeitszeiterfassung</string>
    <string name="beginnArbeitszeit">Beginn:\u0020</string>
    <string name="pause1Beginn">1. Pause Beginn:\u0020</string>
    <string name="pause1Ende">1. Pause Ende:\u0020</string>
    <string name="pause2Beginn">2. Pause Beginn:\u0020</string>
    <string name="pause2Ende">2. Pause Ende:\u0020</string>
    <string name="endeArbeitszeit">Ende:\u0020</string>
    <string name="arbeitszeitBrutto">Arbeitszeit (brutto):\u0020</string>
    <string name="pausenzeit">Pausenzeit:\u0020</string>
    <string name="arbeitszeitNetto">Arbeitszeit (netto):\u0020</string>
    <string name="weiter">WEITER</string>
    <string name="pause">PAUSE</string>
    <string name="datum">Datum:\u0020</string>
    <string name="arbeitszeiterfassung">Arbeitszeiterfassung</string>
    <string name="beginn">Beginn:</string>
    <string name="ende">Ende:</string>
    <string name="arbeitszeit_brutto">Arbeitszeit (brutto):</string>
    <string name="pausenzeit_activity_xml">Pausenzeit:</string>
    <string name="arbeitszeit_netto">Arbeitszeit (netto):</string>
    <string name="start">START</string>
    <string name="ende_activity_xml">ENDE</string>
    <string name="liste">LISTE</string>
</resources>