<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/arbeitszeiterfassung" />
    
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_beginn_arbeitszeit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/beginn" />

                <TextView
                    android:id="@+id/txt_ende_arbeitszeit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/ende" />

                <TextView
                    android:id="@+id/txt_arbeitszeit_brutto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="35dp"
                    android:text="@string/arbeitszeit_brutto" />

                <TextView
                    android:id="@+id/txt_pausenzeit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:text="@string/pausenzeit_activity_xml" />

                <TextView
                    android:id="@+id/txt_arbeitszeit_netto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/arbeitszeit_netto" />



            </LinearLayout>


        </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_start"
        android:background="@drawable/button_rounded_green"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColor="#FFF"
        android:elevation="5dp"
        android:visibility="visible"
        android:onClick="startTimeTracking"
        android:text="@string/start" />

    <Button
        android:id="@+id/btn_end"
        android:background="@drawable/button_rounded_red"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColor="#FFF"
        android:elevation="5dp"
        android:visibility="gone"
        android:onClick="endTimeTracking"
        android:text="@string/ende_activity_xml" />

    <Button
        android:id="@+id/btn_liste"
        android:background="@drawable/button_rounded_blue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:textColor="#FFF"
        android:elevation="5dp"
        android:visibility="visible"
        android:text="@string/liste" />

</LinearLayout>